Fix build dependencies
Signed-off-by: Arthur Chan <arthur.chan@adalogics.com>